--- a/Map/Map.vbproj
+++ b/Map/Map.vbproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{BE4705ED-73D8-4A92-A125-47BEE9F59681}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <StartupObject>Mapping.My.MyApplication</StartupObject>
+    <StartupObject>Mapping.Form1</StartupObject>
     <RootNamespace>Mapping</RootNamespace>
     <AssemblyName>Mapping</AssemblyName>
     <FileAlignment>512</FileAlignment>
